--- a/index.html
+++ b/index.html
@@ -6,14 +6,34 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My First LIFF</title>
 </head>
-<body>
+<body>   
+    <button id="sendmessagebutton">Send Message</button>
+    <div id="profileinfo">
+        <h2>Profile</h2>
+        <div id="profilepicturediv">
+        </div>
+        <table border="1">
+            <tr>
+                <th>userId</th>
+                <td id="useridprofilefield"></td>
+            </tr>
+            <tr>
+                <th>displayName</th>
+                <td id="displaynamefield"></td>
+            </tr>
+            <tr>
+                <th>statusMessage</th>
+                <td id="statusmessagefield"></td>
+            </tr>
+        </table>
+    </div>
+
     <div id="liffdata">
         <h2>LIFF Data</h2>
         <table border="1">
             <tr>
                 <th>language</th>
                 <td id="languagefield"></td>
-                <!--11-->
             </tr>
             <tr>
                 <th>context.viewType</th>
