--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
 
     <!-- Load LIFF SDK -->
-    <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
+    <script src="https://github.com/hgs0725/liff1/blob/main/liff.js"></script>
     <script src="liff.js"></script>
 </body>
 </html>
