--- a/index.html
+++ b/index.html
@@ -34,11 +34,15 @@
                 <th>context.groupId</th>
                 <td id="groupidfield"></td>
             </tr>
+             <tr>
+                <th>context.time</th>
+                <td id="timefield"></td>
+            </tr>
         </table>
     </div>
 
     <!-- Load LIFF SDK -->
-    <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
+    <script src="https://github.com/hgs0725/liff1/blob/main/liff.js"></script>
     <script src="liff.js"></script>
 </body>
 </html>
