--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div id="liffdata">
         <h2>LIFF Data</h2>
             <tr>
-                <label for="testtime">Test Time (date and time):</label>
-<input type="datetime-local" id="testtime" name="testtime">
+                <label for="TestTime">Test Time (date and time):</label>
+<input type="datetime-local" id="TestTime" name="TestTime">
                   <button id="sendmessagebutton">Send Message</button>
             </tr>
         </table>
