--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My First LIFF</title>
+    <title>시험을 볼 수 없는 시간을 알려주세요</title>
 </head>
 <body>   
     <div id="liffdata">
-        <h2>LIFF Data</h2>
+        <h2>시간을 입력해주세요</h2>
             <tr>
                 <label for="TestTime">Test Time (date and time):</label>
 <input type="datetime-local" id="TestTime" name="TestTime">
