--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>시험을 볼 수 없는 시간을 알려주세요</title>
+    <title>1</title>
 </head>
 <body>   
     <div id="liffdata">
-        <h2>시간을 입력해주세요</h2>
             <tr>
-                <label for="TestTime">Test Time (date and time):</label>
-<input type="datetime-local" id="TestTime" name="TestTime">
-                  <button id="sendmessagebutton">Send Message</button>
+                  <h5>1. 1+1은?</h>
+                   <input id = "q1">
+                  <button id="a1">정답 입력</button>
+            </tr>
+             <tr>
+                  <h5>2. 다음 중 프로그래밍 언어가 아닌 것은?</h>
+                   <input type="radio" name="chk" value="HTML">
+	       <input type="radio" name="chk" value="C">
+	       <input type="radio" name="chk" value="JAVA">
+                  <button id="a2">정답 입력</button>
             </tr>
         </table>
     </div>
