--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             </tr>
              <tr>
                   <h5>2. 다음 중 프로그래밍 언어가 아닌 것은?</h>
-                   <input type="radio" name="chk" value="HTML">
-	       <input type="radio" name="chk" value="C">
-	       <input type="radio" name="chk" value="JAVA">
+                   <input type="radio" name="chk" value="HTML">HTML</input>
+	       <input type="radio" name="chk" value="C">C</input>
+	       <input type="radio" name="chk" value="JAVA">JAVA</input>
                   <button id="a2">정답 입력</button>
             </tr>
         </table>
